# avx

./: build.xml  lcmlog-2015-04-24.00  lcmlog-2015-04-24.01  logger.sh
Nicks_Fun_Times/: Attitude.cpp  Attitude.h  Makefile  VehicleState.cpp  VehicleState.h  Waypoint.cpp  Waypoint.h  WaypointManager.cpp  WaypointManager.h  main.cpp  waypoint_t.hpp  waypoint_t.lcm
OldRevisions/camera_logger/: build_1.sh
lcmtypes/: camera_logger_t.lcm  command_t.lcm~  mode_status_t.lcm  motor_command_t.lcm  motor_command_t.lcm~  navio_gps_t.lcm  navio_imu_t.lcm  override_t.lcm  pod_data_t.lcm  state_machine_mode_t.lcm  vision_detection_t.lcm  vision_detection_t.lcm~  vision_options_t.lcm  vision_options_t.lcm~  waypoint_t.lcm
src/: Makefile  Makefile.save  NavioPublisher.cpp  auto_lcm_generator.sh  backup_config.txt  gps_pub  gps_pub.cpp  gps_pub.cpp~  imu_pub  imu_pub.cpp  imu_pub.cpp~  motor_control.cpp
src/AirborneNavigation/: AirNav  AirborneNavigation  AirborneNavigation.cpp  Makefile  Waypoint.cpp  Waypoint.h  WaypointManager.cpp  WaypointManager.cpp~  WaypointManager.h  main.cpp
src/SurfaceStateMachine/: Makefile  ModeStatusListener.cpp  ModeStatusListener.hpp  StateMachine  StateMachine.cpp
src/SurfaceStateMotor/: CMakeCache.txt  CMakeLists.txt  Makefile  motor_control.cpp  motor_control.hpp
src/Surface_Navigation/: GPS_Navigation.java  HeadingCalibration.java  LCMData.java  LinearSpline.java  MotorCommand.java  NavStateHandler.java  PodLCMData.java  PointGPS.java  waypointVector.java
src/comms/: Data2Pod.py  (+8 more)
types/: navio_gps_t.lcm  navio_imu_t.lcm  naviodata_t.lcm
(+112 files in other folders)
